--- a/package.json
+++ b/package.json
@@ -50,16 +50,21 @@
   },
   "dependencies": {
     "apicache": "^1.2.0",
+    "apollo-boost": "^0.1.6",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "cookie-encrypter": "^0.2.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
+    "node-fetch": "^2.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
     "react-markdown": "^3.2.2",
