--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/apapacy/realworld-react-universal-hot#readme",
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -37,41 +37,45 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.18.2",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.2",
-    "react-test-renderer": "^16.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "jest": "^22.4.4",
+    "react-test-renderer": "^16.5.0",
     "react-transform-hmr": "^1.0.4"
   },
   "dependencies": {
-    "apicache": "^1.2.0",
+    "apicache": "^1.2.3",
     "axios": "^0.18.0",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "cookie-encrypter": "^0.2.3",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.2",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "morgan": "^1.9.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-loadable": "^5.3.1",
-    "react-markdown": "^3.2.2",
+    "express": "^4.16.3",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-loadable": "^5.5.0",
+    "react-markdown": "^3.6.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-node-externals": "^1.6.0"
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.18.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-hot-middleware": "^2.23.1",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "node"
   }
 }
