--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "homepage": "https://github.com/apapacy/realworld-react-universal-hot#readme",
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -37,24 +39,30 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "cookie-encrypter": "^1.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "jest": "^22.4.4",
+    "jest": "^23.6.0",
     "react-test-renderer": "^16.5.0",
-    "react-transform-hmr": "^1.0.4"
+    "react-transform-hmr": "^1.0.4",
+    "redux": "^4.0.0",
+    "webpack": "^4.18.0",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "apicache": "^1.2.3",
     "axios": "^0.18.0",
+    "bable-loader": "0.0.1-security",
     "body-parser": "^1.18.3",
-    "cookie-encrypter": "^0.2.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "jsdom": "^12.0.0",
+    "jsdom-global": "^3.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
@@ -65,11 +73,8 @@
     "react-markdown": "^3.6.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack": "^4.18.0",
-    "webpack-cli": "^2.1.5",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.23.1",
     "webpack-node-externals": "^1.7.2"
