--- a/package.json
+++ b/package.json
@@ -27,8 +27,17 @@
   },
   "homepage": "https://github.com/apapacy/realworld-react-universal-hot#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/helper-module-imports": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^8.0.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -46,7 +55,8 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
-    "react-transform-hmr": "^1.0.4"
+    "react-transform-hmr": "^1.0.4",
+    "webpack": "^4.18.0"
   },
   "dependencies": {
     "apicache": "^1.2.0",
@@ -68,10 +78,12 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-node-externals": "^1.6.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
