--- a/package.json
+++ b/package.json
@@ -27,16 +27,13 @@
   },
   "homepage": "https://github.com/apapacy/realworld-react-universal-hot#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^8.0.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.2",
@@ -46,9 +43,11 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
-    "react-transform-hmr": "^1.0.4"
+    "react-transform-hmr": "^1.0.4",
+    "webpack": "^4.19.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "apicache": "^1.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
@@ -69,7 +68,6 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^4.19.0",
     "webpack-cli": "^2.1.5",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
