--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/apapacy/realworld-react-universal-hot#readme",
   "devDependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^8.2.2",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "apicache": "^1.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
@@ -60,7 +62,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.3.7",
+    "react-hot-loader": "^4.3.11",
     "react-loadable": "^5.3.1",
     "react-markdown": "^3.2.2",
     "react-redux": "^5.0.7",
