--- a/package.json
+++ b/package.json
@@ -31,27 +31,31 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.2",
-    "react-test-renderer": "^16.2.0",
+    "jest": "^23.6.0",
+    "jsdom": "12.0.0",
+    "jsdom-global": "3.0.2",
+    "react-test-renderer": "^16.5.2",
     "react-transform-hmr": "^1.0.4",
     "webpack": "^4.19.1"
   },
   "dependencies": {
+    "@babel/node": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "apicache": "^1.2.0",
     "axios": "^0.18.0",
+    "babel-jest": "^23.6.0",
     "body-parser": "^1.18.2",
     "cookie-encrypter": "^0.2.3",
     "cookie-parser": "^1.4.3",
@@ -60,6 +64,7 @@
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
     "prop-types": "^15.6.1",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.3.11",
@@ -74,5 +79,8 @@
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
     "webpack-node-externals": "^1.7.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
