--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "jsdom": "12.0.0",
     "jsdom-global": "3.0.2",
     "react-test-renderer": "^16.5.2",
-    "react-transform-hmr": "^1.0.4",
-    "webpack": "^4.19.1"
+    "react-transform-hmr": "^1.0.4"
   },
   "dependencies": {
     "@babel/node": "^7.0.0",
@@ -60,6 +59,8 @@
     "cookie-encrypter": "^0.2.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "from": "^0.1.7",
+    "import": "0.0.6",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
@@ -75,6 +76,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "renderer": "^0.1.5",
+    "webpack": "^4.19.1",
     "webpack-cli": "^2.1.5",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-hot-middleware": "^2.24.0",
